Fix composer buttons overflowing the composer box in single-column

--- a/app/javascript/flavours/glitch/styles/components/composer.scss
+++ b/app/javascript/flavours/glitch/styles/components/composer.scss
@@ -588,6 +588,7 @@
   white-space: nowrap;
   overflow: hidden;
   justify-content: flex-end;
+  flex: 0 0 auto;
 
   & > .clear {
     float: left;
